--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
         <div class="overview-images__container">
           <div class="overview-images__container__container1">
             <img
-              src="../img/Rectangle1.png"
+              src="../img/rectangle1.png"
               alt=""
               class="overview-images__container__container1__image"
             />
             <img
-              src="../img/Rectangle1.png"
+              src="../img/rectangle1.png"
               alt=""
               class="overview-images__container__container1__image"
             />
@@ -223,7 +223,7 @@
 
           <!-- MID IMAGE -->
           <img
-            src="../img/Rectangle.png"
+            src="../img/rectangle.png"
             alt=""
             class="overview-images__container__image-mid"
           />
@@ -231,12 +231,12 @@
 
           <div class="overview-images__container__container2">
             <img
-              src="../img/Rectangle1.png"
+              src="../img/rectangle1.png"
               alt=""
               class="overview-images__container__container2__image"
             />
             <img
-              src="../img/Rectangle1.png"
+              src="../img/rectangle1.png"
               alt=""
               class="overview-images__container__container2__image"
             />
